--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -20,6 +20,7 @@ header {
     padding: 1rem 2rem;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.3);
     width: 100%;
+    z-index: 1000;
 }
 
 nav ul {
@@ -29,6 +30,7 @@ nav ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 nav ul li {
@@ -49,6 +51,7 @@ nav ul li a:hover {
 form {
     display: flex;
     align-items: center;
+    margin-right: 1rem;
 }
 
 form label {
@@ -59,10 +62,11 @@ form label {
 form select,
 form input[type="text"] {
     padding: 0.5rem;
-    border: 1px solid #444;
+    border: 0.1rem solid #444;
     background-color: #333;
     color: var(--text-color);
     border-radius: 0.3rem;
+    margin-right: 0.5rem;
 }
 
 form button {
@@ -81,129 +85,92 @@ form button:hover {
 }
 
 .hamburger {
-
     display: none;
-
     position: absolute;
-
     top: 1rem;
-
     right: 1rem;
-
     padding: 0.5rem;
-
     background-color: transparent;
-
     border: none;
-
     cursor: pointer;
-
 }
-
 
 .hamburger span {
-
     display: block;
-
-    width: 20px;
-
-    height: 2px;
-
+    width: 2rem;
+    height: 0.2rem;
     background-color: var(--primary-color);
-
-    margin-bottom: 4px;
-
+    margin-bottom: 0.4rem;
     transition: transform 0.3s ease;
-
 }
-
 
 .hamburger span:last-child {
-
     margin-bottom: 0;
-
 }
-
-
-/* Add styles for the navigation menu wrapper */
 
 .nav-wrapper {
-
     display: none;
-
     justify-content: space-between;
-
     align-items: center;
-
 }
 
-
-/* Media query for small screens */
-
-@media only screen and (max-width: 768px) {
-    header {
+@media only screen and (max-width: 48rem) {
+    nav ul {
         display: none;
     }
 
-    .nav-wrapper {
-
-        display: flex;
-
+    header {
+        width: auto;
+        height: 4rem;
     }
 
+    nav .nav-wrapper {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    ul {
+        list-style-type: none;
+    }
+
+    li a {
+        text-decoration: none;
+        color: var(--primary-color);
+        padding: 0.5rem 1rem;
+        transition: color 0.3s ease;
+    }
+
+    li a:hover {
+        color: var(--secondary-color);
+    }
 
     .hamburger {
-
         display: block;
-
     }
-
-
-    /* Style the navigation menu when the hamburger menu is active */
 
     .nav-wrapper.active {
-
-        display: block;
-
+        display: flex;
         position: absolute;
-
         top: 0;
-
         left: 0;
-
         width: 100%;
-
         height: 100vh;
-
         background-color: var(--background-color);
-
         padding: 1rem;
-
         z-index: 1;
-
     }
-
 
     .nav-wrapper.active ul {
-
         flex-direction: column;
-
         align-items: center;
-
     }
-
 
     .nav-wrapper.active li {
-
         margin-bottom: 1rem;
-
     }
-
 
     .nav-wrapper.active a {
-
         font-size: 1.5rem;
-
     }
-
 }
